// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolbarFieldRangedMonthly Component should export select options: toolbarFieldOptions 1`] = `
[
  {
    "_title": "current",
    "isCurrent": true,
    "isSelected": false,
    "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"current"})",
    "value": {
      "endDate": 2019-07-31T23:59:59.999Z,
      "startDate": 2019-07-01T00:00:00.000Z,
    },
  },
  {
    "_title": "june",
    "isSelected": false,
    "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"June"})",
    "value": {
      "endDate": 2019-06-30T23:59:59.999Z,
      "startDate": 2019-06-01T00:00:00.000Z,
    },
  },
  {
    "_title": "may",
    "isSelected": false,
    "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"May"})",
    "value": {
      "endDate": 2019-05-31T23:59:59.999Z,
      "startDate": 2019-05-01T00:00:00.000Z,
    },
  },
  {
    "_title": "april",
    "isSelected": false,
    "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"April"})",
    "value": {
      "endDate": 2019-04-30T23:59:59.999Z,
      "startDate": 2019-04-01T00:00:00.000Z,
    },
  },
  {
    "_title": "march",
    "isSelected": false,
    "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"March"})",
    "value": {
      "endDate": 2019-03-31T23:59:59.999Z,
      "startDate": 2019-03-01T00:00:00.000Z,
    },
  },
  {
    "_title": "february",
    "isSelected": false,
    "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"February"})",
    "value": {
      "endDate": 2019-02-28T23:59:59.999Z,
      "startDate": 2019-02-01T00:00:00.000Z,
    },
  },
  {
    "_title": "january",
    "isSelected": false,
    "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"January"})",
    "value": {
      "endDate": 2019-01-31T23:59:59.999Z,
      "startDate": 2019-01-01T00:00:00.000Z,
    },
  },
  {
    "_title": "december",
    "isSelected": false,
    "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"December 2018"})",
    "value": {
      "endDate": 2018-12-31T23:59:59.999Z,
      "startDate": 2018-12-01T00:00:00.000Z,
    },
  },
  {
    "_title": "november",
    "isSelected": false,
    "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"November 2018"})",
    "value": {
      "endDate": 2018-11-30T23:59:59.999Z,
      "startDate": 2018-11-01T00:00:00.000Z,
    },
  },
  {
    "_title": "october",
    "isSelected": false,
    "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"October 2018"})",
    "value": {
      "endDate": 2018-10-31T23:59:59.999Z,
      "startDate": 2018-10-01T00:00:00.000Z,
    },
  },
  {
    "_title": "september",
    "isSelected": false,
    "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"September 2018"})",
    "value": {
      "endDate": 2018-09-30T23:59:59.999Z,
      "startDate": 2018-09-01T00:00:00.000Z,
    },
  },
  {
    "_title": "august",
    "isSelected": false,
    "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"August 2018"})",
    "value": {
      "endDate": 2018-08-31T23:59:59.999Z,
      "startDate": 2018-08-01T00:00:00.000Z,
    },
  },
]
`;

exports[`ToolbarFieldRangedMonthly Component should handle selecting an option directly: selected option 1`] = `
<Select
  alignment={
    {
      "position": "left",
    }
  }
  aria-label="t(curiosity-toolbar.placeholder, {"context":"rangedMonthly"})"
  data-test="toolbarFieldRangeGranularity"
  maxHeight={250}
  onSelect={[Function]}
  options={
    [
      {
        "_title": "current",
        "isCurrent": true,
        "isSelected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"current"})",
        "value": {
          "endDate": 2019-07-31T23:59:59.999Z,
          "startDate": 2019-07-01T00:00:00.000Z,
        },
      },
      {
        "_title": "june",
        "isSelected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"June"})",
        "value": {
          "endDate": 2019-06-30T23:59:59.999Z,
          "startDate": 2019-06-01T00:00:00.000Z,
        },
      },
      {
        "_title": "may",
        "isSelected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"May"})",
        "value": {
          "endDate": 2019-05-31T23:59:59.999Z,
          "startDate": 2019-05-01T00:00:00.000Z,
        },
      },
      {
        "_title": "april",
        "isSelected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"April"})",
        "value": {
          "endDate": 2019-04-30T23:59:59.999Z,
          "startDate": 2019-04-01T00:00:00.000Z,
        },
      },
      {
        "_title": "march",
        "isSelected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"March"})",
        "value": {
          "endDate": 2019-03-31T23:59:59.999Z,
          "startDate": 2019-03-01T00:00:00.000Z,
        },
      },
      {
        "_title": "february",
        "isSelected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"February"})",
        "value": {
          "endDate": 2019-02-28T23:59:59.999Z,
          "startDate": 2019-02-01T00:00:00.000Z,
        },
      },
      {
        "_title": "january",
        "isSelected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"January"})",
        "value": {
          "endDate": 2019-01-31T23:59:59.999Z,
          "startDate": 2019-01-01T00:00:00.000Z,
        },
      },
      {
        "_title": "december",
        "isSelected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"December 2018"})",
        "value": {
          "endDate": 2018-12-31T23:59:59.999Z,
          "startDate": 2018-12-01T00:00:00.000Z,
        },
      },
      {
        "_title": "november",
        "isSelected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"November 2018"})",
        "value": {
          "endDate": 2018-11-30T23:59:59.999Z,
          "startDate": 2018-11-01T00:00:00.000Z,
        },
      },
      {
        "_title": "october",
        "isSelected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"October 2018"})",
        "value": {
          "endDate": 2018-10-31T23:59:59.999Z,
          "startDate": 2018-10-01T00:00:00.000Z,
        },
      },
      {
        "_title": "september",
        "isSelected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"September 2018"})",
        "value": {
          "endDate": 2018-09-30T23:59:59.999Z,
          "startDate": 2018-09-01T00:00:00.000Z,
        },
      },
      {
        "_title": "august",
        "isSelected": true,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"August 2018"})",
        "value": {
          "endDate": 2018-08-31T23:59:59.999Z,
          "startDate": 2018-08-01T00:00:00.000Z,
        },
      },
    ]
  }
  placeholder="t(curiosity-toolbar.placeholder, {"context":"rangedMonthly"})"
/>
`;

exports[`ToolbarFieldRangedMonthly Component should handle updating granularity and date through redux state with component: dispatch, component 1`] = `
[
  [
    [
      {
        "type": "SET_QUERY_CLEAR_INVENTORY_LIST",
        "viewId": undefined,
      },
      {
        "filter": "granularity",
        "type": "SET_QUERY_GRAPH",
        "value": "Daily",
        "viewId": undefined,
      },
      {
        "filter": "beginning",
        "type": "SET_QUERY",
        "value": "2018-08-01T00:00:00.000Z",
        "viewId": undefined,
      },
      {
        "filter": "ending",
        "type": "SET_QUERY",
        "value": "2018-08-31T23:59:59.999Z",
        "viewId": undefined,
      },
    ],
  ],
]
`;

exports[`ToolbarFieldRangedMonthly Component should handle updating granularity and date through redux state with hook: dispatch, hook 1`] = `
[
  [
    [
      {
        "type": "SET_QUERY_CLEAR_INVENTORY_LIST",
        "viewId": "loremIpsum",
      },
      {
        "filter": "granularity",
        "type": "SET_QUERY_GRAPH",
        "value": "Daily",
        "viewId": "loremIpsum",
      },
      {
        "filter": "beginning",
        "type": "SET_QUERY",
        "value": "2018-08-01T00:00:00.000Z",
        "viewId": "loremIpsum",
      },
      {
        "filter": "ending",
        "type": "SET_QUERY",
        "value": "2018-08-31T00:00:00.000Z",
        "viewId": "loremIpsum",
      },
    ],
  ],
]
`;

exports[`ToolbarFieldRangedMonthly Component should render a basic component: basic 1`] = `
<Select
  alignment={
    {
      "position": "left",
    }
  }
  aria-label="t(curiosity-toolbar.placeholder, {"context":"rangedMonthly"})"
  data-test="toolbarFieldRangeGranularity"
  maxHeight={250}
  onSelect={[Function]}
  options={
    [
      {
        "_title": "current",
        "isCurrent": true,
        "isSelected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"current"})",
        "value": {
          "endDate": 2019-07-31T23:59:59.999Z,
          "startDate": 2019-07-01T00:00:00.000Z,
        },
      },
      {
        "_title": "june",
        "isSelected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"June"})",
        "value": {
          "endDate": 2019-06-30T23:59:59.999Z,
          "startDate": 2019-06-01T00:00:00.000Z,
        },
      },
      {
        "_title": "may",
        "isSelected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"May"})",
        "value": {
          "endDate": 2019-05-31T23:59:59.999Z,
          "startDate": 2019-05-01T00:00:00.000Z,
        },
      },
      {
        "_title": "april",
        "isSelected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"April"})",
        "value": {
          "endDate": 2019-04-30T23:59:59.999Z,
          "startDate": 2019-04-01T00:00:00.000Z,
        },
      },
      {
        "_title": "march",
        "isSelected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"March"})",
        "value": {
          "endDate": 2019-03-31T23:59:59.999Z,
          "startDate": 2019-03-01T00:00:00.000Z,
        },
      },
      {
        "_title": "february",
        "isSelected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"February"})",
        "value": {
          "endDate": 2019-02-28T23:59:59.999Z,
          "startDate": 2019-02-01T00:00:00.000Z,
        },
      },
      {
        "_title": "january",
        "isSelected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"January"})",
        "value": {
          "endDate": 2019-01-31T23:59:59.999Z,
          "startDate": 2019-01-01T00:00:00.000Z,
        },
      },
      {
        "_title": "december",
        "isSelected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"December 2018"})",
        "value": {
          "endDate": 2018-12-31T23:59:59.999Z,
          "startDate": 2018-12-01T00:00:00.000Z,
        },
      },
      {
        "_title": "november",
        "isSelected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"November 2018"})",
        "value": {
          "endDate": 2018-11-30T23:59:59.999Z,
          "startDate": 2018-11-01T00:00:00.000Z,
        },
      },
      {
        "_title": "october",
        "isSelected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"October 2018"})",
        "value": {
          "endDate": 2018-10-31T23:59:59.999Z,
          "startDate": 2018-10-01T00:00:00.000Z,
        },
      },
      {
        "_title": "september",
        "isSelected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"September 2018"})",
        "value": {
          "endDate": 2018-09-30T23:59:59.999Z,
          "startDate": 2018-09-01T00:00:00.000Z,
        },
      },
      {
        "_title": "august",
        "isSelected": false,
        "title": "t(curiosity-toolbar.label_granularityRangedMonthly, {"context":"August 2018"})",
        "value": {
          "endDate": 2018-08-31T23:59:59.999Z,
          "startDate": 2018-08-01T00:00:00.000Z,
        },
      },
    ]
  }
  placeholder="t(curiosity-toolbar.placeholder, {"context":"rangedMonthly"})"
/>
`;
